# DD2480-BASIC-CI

./: .env.template  .env.tests  .gitignore  LICENSE  Makefile  README.md  pipeline.yaml  pyproject.toml  webhook.json
docs/: Contribute.md  Server.md  essence.md  program_flow.md
src/: get_os.py
src/basic_ci/: TaskRunner.py  get_os.py  main.py
src/basic_ci/api/: id_API.py  run_information.py  runs_API.py  system.py  webhook.py
src/basic_ci/core/: TaskRunner.py  config.py  signature.py
src/basic_ci/schemes/: TaskResult.py  pipeline.py  push_payload.py  stage_result.py  task.py
src/basic_ci/services/: ServiceCommand.py  TaskResult.py  dummy_database_service.py  file_service.py  gitclone_service.py  id_service.py  logger_service.py  notification_service.py  pipeline_config_service.py  pipeline_stage_service.py  read_results_service.py  result_save_service.py  setupRepo.py  task_service.py
src/basic_ci/templates/: all_runs.html  run_details.html
tests/: Test_UID_service.py  test_get_os.py  test_main.py  test_service_command.py
tests/api/: test_runs.py  test_system.py  test_webhok.py
tests/core/: test_config.py  test_integreation_taskrunnner.py  test_signature_verifier.py
tests/data/: correct_pipeline.yaml  integreation_pipeline.yaml  webhook.json  wrong_pipeline.yaml
tests/schemes/: test_push_payload.py
tests/services/: test_file_service.py  test_gitclone_service.py  test_logger_service.py  test_notification_service.py  test_pipeline_config_service.py  test_pipeline_stage_service.py  test_service_command.py  test_task_runner.py  test_task_service.py  test_uid_service.py
