[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic-ci"
version = "0.1.0"
description = "Basic CI implementation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Davide Mario Attebrant Sbrzesny" },
  { name = "Gabriel Alejandro Arias Goa" },
  { name = "Mohamed Aziz Jribi" },
  { name = "Yasmine Schüllerqvist" },
  { name = "Anton Trappe "}
]
dependencies = [
    "fastapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    ]

[tool.hatch.build.targets.wheel]
packages = ["src/basic_ci"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["TID252"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

