[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic-ci"
version = "0.1.1"
description = "Basic CI implementation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Davide Mario Attebrant Sbrzesny" },
  { name = "Gabriel Alejandro Arias Goa" },
  { name = "Mohamed Aziz Jribi" },
  { name = "Yasmine Schüllerqvist" },
  { name = "Anton Trappe "}
]
dependencies = [
    "fastapi[standard]",
    "pydantic",
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    ]

[tool.hatch.build.targets.wheel]
packages = ["src/basic_ci"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F401",   # Remove unused imports
    "TID252", # Ban relative imports
    "TID251",
    "I",      # Sort imports
    "ANN",    # Enforce type annotations
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ANN"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false
suppress-none-returning = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"src".msg = "Do not import from 'src'. Use the package name directly (e.g., 'from my_api import ...')."
