[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic-ci"
version = "0.1.1"
description = "Basic CI implementation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Davide Mario Attebrant Sbrzesny" },
  { name = "Gabriel Alejandro Arias Goa" },
  { name = "Mohamed Aziz Jribi" },
  { name = "Yasmine Schüllerqvist" },
  { name = "Anton Trappe "}
]
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "requests",
    "GitPython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-requests",
    "types-PyYAML",
    ]

[tool.hatch.build.targets.wheel]
packages = ["src/basic_ci"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F401",   # Remove unused imports
    "TID252", # Ban relative imports
    "TID251",
    "I",      # Sort imports
    "ANN",    # Enforce type annotations
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ANN"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false
suppress-none-returning = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"src".msg = "Do not import from 'src'. Use the package name directly (e.g., 'from my_api import ...')."

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "silent"
strict = false

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*/tests/*",
    "test_*.py"
]
disallow_untyped_defs = false
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "*/__init__.py",
    "__init__.py"
]
disallow_untyped_defs = false